force-app/main/default/objects/Securitization__c/Securitization__c.object-meta.xml
<CustomObject>
    <label>Securitization</label>
    <nameField>
        <label>Securitization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Securitizations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>