force-app/main/default/objects/Securitization__c/fields/CREFC_License_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>CREFC_License_Fee_Rate__c</fullName>
    <label>CREFC® License Fee Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>