force-app/main/default/objects/Securitization__c/fields/Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date__c</fullName>
    <description>Date this Securitization is expected to close or the date it is closed</description>
    <inlineHelpText>Date this Securitization is expected to close or the date it is closed</inlineHelpText>
    <label>Cut-Off Date</label>
    <type>Date</type>
</CustomField>