force-app/main/default/objects/Securitization__c/fields/Funding_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Funding_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Vehicle</label>
    <referenceTo>Funding_Vehicle__c</referenceTo>
    <relationshipLabel>Securitizations</relationshipLabel>
    <relationshipName>Securitizations</relationshipName>
    <type>Lookup</type>
</CustomField>