force-app/main/default/objects/Securitization__c/fields/Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Date__c</fullName>
    <label>Pricing Date</label>
    <type>Date</type>
</CustomField>