force-app/main/default/objects/Securitization__c/fields/Property_Management_Consultant_FeeAmount__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Consultant_FeeAmount__c</fullName>
    <label>Property Management Consultant Fee</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>