force-app/main/default/objects/Securitization__c/fields/Servicer_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Name__c</fullName>
    <label>Servicer Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>