force-app/main/default/objects/Securitization__c/fields/Servicing_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Fee_Rate__c</fullName>
    <label>Servicing Fee Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>