force-app/main/default/objects/Securitization__c/fields/Total_Issuance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Issuance_Amount__c</fullName>
    <label>Total Issuance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>