force-app/main/default/objects/Securitization__c/fields/Trustee_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Name__c</fullName>
    <label>Trustee Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>