force-app/main/default/objects/Securitization__c/fields/Trustee_Note_Administrator_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Note_Administrator_Fee_Rate__c</fullName>
    <label>Trustee/Note Administrator Fee Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>